--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -4,6 +4,40 @@ $Futuris: 'Futuris Bold';
     font-size: $size;
     font-family: $family !important;
 }
+
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.parent {
+  overflow: scroll;
+  height: 100vh;
+  scroll-snap-type: mandatory;
+  scroll-snap-points-y: repeat(100vh);
+  scroll-snap-type: y mandatory;
+}
+
+section {
+  height: 100vh;
+  scroll-snap-align: start;
+  position: relative;
+}
+
+.one {
+  background-color: red;
+}
+.two {
+  background-color: blue;
+}
+.three {
+  background-color: grey;
+}
+.four {
+  background-color: green;
+}
+
+
 .Contact{
     & h1{
         @include fons(2rem, $Futuris);
