--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -6,20 +6,20 @@ $Futuris: 'Futuris Bold';
 }
 
 body {
-  height: 100vh;
+  width: 100vh;
   overflow: hidden;
 }
 
 .parent {
   overflow: scroll;
-  height: 100vh;
+  width: 100vh;
   scroll-snap-type: mandatory;
-  scroll-snap-points-y: repeat(100vh);
-  scroll-snap-type: y mandatory;
+  scroll-snap-points-x: repeat(100vh);
+  scroll-snap-type: x mandatory;
 }
 
 section {
-  height: 100vh;
+  width: 100vh;
   scroll-snap-align: start;
   position: relative;
 }
