--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -5,8 +5,8 @@ $Futuris: 'Futuris Bold';
     font-family: $family !important;
 }
 
-body {
-  width: 100vh;
+.body {
+  width: 100%;
   height: 100px;
   margin-top: 300px;
   overflow: hidden;
@@ -14,14 +14,16 @@ body {
 
 .parent {
   overflow: scroll;
-  width: 100vh;
+  width: 100%;
+  height: 100px;
   scroll-snap-type: mandatory;
   scroll-snap-points-x: repeat(100vh);
   scroll-snap-type: x mandatory;
 }
 
 section {
-  width: 100vh;
+  width: 100%;
+  height: 100px;
   scroll-snap-align: start;
   position: relative;
 }
