--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -7,17 +7,11 @@ $Futuris: 'Futuris Bold';
 
 .section {
     margin-top: 300px;
-  display: flex;
-  gap: 20px;
-  max-width: 450px;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  box-shadow: 0 3px 10px 0 rgba(#000, 0.1);
-  -webkit-overflow-scrolling: touch;
-  scroll-padding: 1rem;
-  padding: 1rem;
-  margin: 3rem auto 0;
-  border-radius: 5px;
+    display: flex;
+    width: 100%;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
 }
 
 .section__item {
