--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -154,33 +154,22 @@ body{
 .MuiBadge-colorPrimary{
     background-color: $colorMain!important;
 }
-.mandatory_{
+.mandatory{
     scroll-snap-type: x mandatory;
 }
-.activeCatTest_{
+.activeCatTest{
     scroll-snap-align: center;
     scroll-snap-stop: always;
 }
 .scrollCat{
-    /*margin-top: 50; 
+    margin-top: 50; 
     display: flex;
     flex-direction: row;
     overflow: scroll;
-    
-    
-    width: 100%;*/
-    
-    
+    position: fixed;
     background-color: #fff;
     z-index: 1;
-    position: fixed;
-    margin-top: 50; 
-    display: flex;
     width: 100%;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-    
     &::-webkit-scrollbar{
     	display: none;
     }
@@ -199,19 +188,6 @@ body{
     padding: 4px 8px;
     border-radius: 5px;
     color: #fff;
-    
-    
-    justify-content: center;
-    align-items: center;
-    flex: 0 0 content;
-    height: 150px;
-    scroll-snap-align: center;
-    
-    
-    width: max-content;
-    display: flex;
-    white-space: nowrap;
-    
     & span, a{
         color: #fff!important;
     }
