--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -36,6 +36,7 @@ $Futuris: 'Futuris Bold';
     }
     @media (max-width: 960px) {
         margin: -24px!important;
+        margin-top: 64px!important;
         & > div{
             padding-left: 34px!important;
         }
