--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -29,6 +29,13 @@ $Futuris: 'Futuris Bold';
             background-color: #e5e5e5;
         }
     }
+    @media (max-width: 960px) {
+        margin: -24px!important;
+        margin-top: 64px!important;
+        & > div{
+            padding-left: 34px!important;
+        }
+    }
 }
 .modalActii{
     & h6{
