--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -29,6 +29,12 @@ $Futuris: 'Futuris Bold';
             background-color: #e5e5e5;
         }
     }
+    @media (min-width: 960px) {
+        margin-left: 8.35% !important; 
+        flex-grow: 0;
+        max-width: 83.333333%;
+        flex-basis: 83.333333%;
+    }
     @media (max-width: 960px) {
         margin: -24px!important;
         margin-top: 64px!important;
