--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -26,6 +26,10 @@ $Futuris: 'Futuris Bold';
         & > div{
             padding-left: 34px!important;
         }
+        & h1{
+            @include fons(1.7rem, $Futuris);
+            text-align: center;
+        }
     }
 }
 .modalActii{
