--- a/src/components/profile/profile.style.scss
+++ b/src/components/profile/profile.style.scss
@@ -51,12 +51,13 @@ $mainColor: #BB0025;
 .TablePromo{
     width: 100%;
     border-collapse: collapse;
+    padding-bottom: 50!important;
     & .TEXT{
         @include fons(1.1rem, $Ubuntu);
     }
     & td{
         text-align: center;
-        padding: 15px 5px;
+        padding: 12px 5px;
     }
     & thead{
         border-bottom: 2px solid #e5e5e5;
@@ -81,6 +82,7 @@ $mainColor: #BB0025;
 .TablePromoMobile{
     width: 100%;
     border-collapse: collapse;
+    padding-bottom: 50!important;
     & tbody{
         & tr{
             border-bottom: 1px solid #e5e5e5;
