--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -47,6 +47,8 @@ $colorMain: #BB0025;
         align-items: flex-end;
         & > svg{
             padding-bottom: 4px;
+            font-size: 1.2rem;
+            padding-left: 2px;
         }
     }
     & .CardInCardItem{
@@ -90,6 +92,8 @@ $colorMain: #BB0025;
         align-items: flex-end;
         & > svg{
             padding-bottom: 4px;
+            font-size: 1.2rem;
+            padding-left: 2px;
         }
     }
     & .CardInCardItem{
