--- a/src/components/item/item.style.scss
+++ b/src/components/item/item.style.scss
@@ -38,6 +38,8 @@ $Futuris: 'Futuris Bold';
         font-size: 1.4rem!important;
         & svg{
             padding-bottom: 1px;
+            font-size: 1.2rem;
+            padding-left: 2px;
         }
     }
     & .CardInCardItem{
