--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -49,6 +49,9 @@ $Futuris: 'Futuris Bold';
                 @include fons(0.8rem, $Ubuntu);
             }
         }
+        & .MuiTouchRipple-root{
+            display: none;
+        }
     }
     @media (min-width: 960px) {
         margin-left: 8.35% !important; 
